--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>G News</title>
+        <title>No.1News</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Bootstrap News Template - Free HTML Templates" name="keywords">
         <meta content="Bootstrap News Template - Free HTML Templates" name="description">
